# ai-audit-engineer-portfolio

./: .env  .env.example  .gitignore  AUDIT_FLOWCHART.html  AUDIT_FLOWCHART.md  Dockerfile  GPT5.5-Sarvagya-Project-Advice.md  PROJECT_BLUEPRINT.md  README.md  USER_GUIDE.md  api.py  app.py  claude-internal-compressed-diffie.md  cleanup_rag_documents.py  db_utils.py  docker-compose.yml  ingest_policies.py  inspect_rag_documents.py  main.py  pyproject.toml  requirements.txt  run_training.py  test-grok.md
AI-RAG-BOT/: .gitignore  app.py  readme.md  requirements.txt
Internal Audit Checklist/: 1. PROJECT_STATUS.md  2. ROADMAP.md  3. TECH_STACK.md  A.3 FUTURE FULL SCALE PROJECT PLANNING.docx
agents/: anomaly_rag_auditor.py
backend/: main.py
checks/: __init__.py
config/: compliance_calendar.yaml  navigation_registry.yaml
core/: __init__.py  audit_program.py  controls.py  engagements.py  evidence.py  init_audit_system.py  policy_manager.py  policy_review.py  rbac.py  standards_registry.py
data/: HOW_TO_READ_THE_DASHBOARD.md  audit.db  feature_engineering.py  generate_synthetic_vendor_data.py
models/: isolation_forest.joblib  xgboost_risk_regressor.joblib
notebooks/: 01_eda.ipynb  README.md
pages/: _2_Policy_RAG_Bot.py  anomaly_detector.py  audit_committee_pack.py  audit_kpi_dashboard.py  audit_planning_engine.py  audit_report_center.py  audit_session_manager.py  audit_workflow.py  brs_reconciliation.py  contract_management_auditor.py  duplicate_invoice_detector.py  dynamic_audit_builder.py  expense_claim_auditor.py  financial_statement_auditor.py  (+16 more)
(+68 files in other folders)
