[project]
name = "audit-anomaly-detector"
version = "0.1.0"
description = "Clean Python template for an audit anomaly detection engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.0",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "shap==0.44.1",
  "matplotlib==3.8.2",
  "seaborn==0.13.2",
  "polars==0.20.3",
  "psycopg2-binary==2.9.9",
  "python-dotenv==1.0.1",
  "loguru==0.7.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

